syntax = "proto3";
package penumbra.core.component.chain.v1alpha1;

// Global chain configuration data, such as chain ID, epoch duration, etc.
message ChainParameters {
  // The identifier of the chain.
  string chain_id = 1;
  // The duration of each epoch, in number of blocks.
  uint64 epoch_duration = 2;
}

// The ratio between two numbers, used in governance to describe vote thresholds and quorums.
message Ratio {
  // The numerator.
  uint64 numerator = 1;
  // The denominator.
  uint64 denominator = 2;
}

// Chain-specific genesis content.
message GenesisContent {
  // The ChainParameters present at genesis.
  ChainParameters chain_params = 1;
}

message Epoch {
  uint64 index = 1;
  uint64 start_height = 2;
}

// Query operations for the chain component.
service QueryService {
  // TODO: move to SCT cf sct/src/component/view.rs:9 "make epoch management the responsibility of this component"
  rpc EpochByHeight(EpochByHeightRequest) returns (EpochByHeightResponse);
}

message EpochByHeightRequest {
  uint64 height = 1;
}

message EpochByHeightResponse {
  core.component.chain.v1alpha1.Epoch epoch = 1;
}
